src/Bookmarks/component.css
.BookmarkFolders {
  --size-folder-gap: var(--size-gap);
  --size-folder-padding-x: var(--size-wide-gap);
  --size-folder-padding-y: var(--size-gap);
  --size-folder-indent: 60px;
  --size-folder-item-gap: var(--size-gap);
  --size-folder-item-width: 150px;
  --size-folder-item-height: 40px;
  --size-icon: 16px;
  --size-edit-button: 21px;
}

.BookmarkFolders {
  display: grid;
  row-gap: var(--size-folder-gap);
}

:root[data-bookmark-folders-alignment='horizontal'] .BookmarkFolders {
  overflow-x: scroll;
  grid-auto-flow: column;
  column-gap: var(--size-folder-gap);
}

/* set background to prevent screen flicker while loading */
.BookmarkFolders:empty {
  height: 100vh;
  border-radius: 3px;
  background-color: var(--palette-2);
}

.BookmarkFolder__Indent {
  margin-left: calc(var(--size-folder-indent) * var(--depth));
}

.BookmarkFolder {
  display: grid;
  grid-template-columns: repeat(auto-fill, var(--size-folder-item-width));
  gap: var(--size-folder-item-gap);
  padding: var(--size-folder-padding-y) var(--size-folder-padding-x);
  border-radius: 3px;
  background-color: var(--palette-2);
}

.BookmarkFolder__Heading {
  font-size: 120%;
}

.Bookmark {
  position: relative; /* for .BookmarkEditButton */
}

/* when move a bookmark across folders, "From" should be hidden */
.Bookmark__DragDrop__From:not(.Bookmark__DragDrop__To) .Bookmark {
  visibility: hidden;
}

/* when the pointer is out of "To" element, it should be a placeholder */
.Bookmark__DragDrop__To[data-bookmark-drag-state='leave'] {
  outline: var(--palette-1) dotted 2px;
}

.Bookmark__DragDrop__To[data-bookmark-drag-state='leave'] .Bookmark {
  visibility: hidden;
}

/* when the pointer is over a bookmark, it should be outlined */
.Bookmark__DragDrop__To[data-bookmark-drag-state='enter'] {
  outline: var(--palette-1) solid 2px;
}

.BookmarkButton {
  display: grid;
  grid-template-columns: var(--size-icon) auto;
  gap: var(--size-folder-item-gap);

  height: var(--size-folder-item-height);
  padding: var(--size-folder-item-gap);
  overflow: hidden;
  border-radius: 3px;
  background-color: var(--palette-3);
}

.BookmarkButton:not([data-drag-active]):hover {
  background-color: var(--palette-2);
  box-shadow: 0 0 calc(var(--size-folder-item-gap) * 3) var(--palette-01);
}

.BookmarkButton__Title {
  grid-column: 2;
  grid-row: 1 / 2;
}

.BookmarkButton__Icon {
  grid-column: 1;
  grid-row: 1;
  width: var(--size-icon);
  height: var(--size-icon);
}

.BookmarkButton__Badge {
  grid-column: 1;
  grid-row: 2;
  align-self: end;
  width: var(--size-icon);
  height: var(--size-icon);
  text-align: center;
  border-radius: 3px;
  background-color: var(--palette-2);
  color: var(--palette-00);
}

.BookmarkEditButton {
  position: absolute;
  bottom: 0;
  right: 0;
  height: var(--size-edit-button);
  width: var(--size-edit-button);

  border-radius: 3px;
  color: var(--palette-1);
  font-size: 120%;
  font-weight: bold;
  text-align: center;
}

.BookmarkEditButton[data-drag-active] {
  display: none;
}

.BookmarkEditButton {
  visibility: hidden;
  opacity: 0;
  transition: all 0.25s linear;
}

.Bookmark:hover .BookmarkEditButton,
.Bookmark > a:focus + .BookmarkEditButton {
  visibility: visible;
  opacity: 1;
}

.BookmarkEditButton:hover,
.BookmarkEditButton:focus-visible {
  visibility: visible;
  opacity: 1;
  background-color: var(--palette-2);
  box-shadow: 0 0 calc(var(--size-folder-item-gap) * 3) var(--palette-01);
  transition: none;
}

